# photo-organizer

./: Cargo.toml  LICENSE  README.md
src/: exif.rs  main.rs
