[package]
name = "photo-organizer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = {version = "4.5", features = ["derive"]}
crc32fast = "1.5"
rfd = "0.15"
rusttype = "0.9.2"
imageproc = "0.23.0"

# コンパイル時間を短縮するために必要なものだけ有効化する
[dependencies.image]
version = "0.24.7"
default-features = false
features = ["jpeg_rayon", "png"]
